--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>Hello World</p>
+    <h1 style="color: blue">Hello World</h1>
   </body>
 </html>
